[package]
name = "fastjump"
version = "0.6.2"
authors = ["Mattias Lundberg <me@mlundberg.se>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
fuzzy-matcher = "*"
rand = "0.7"
yaml-rust = "0.4"
linked-hash-map = "*"

[features]
nightly = []

[build-dependencies]
rustc_version = "0.1.*"
