[package]
name = "fastjump"
version = "0.6.3"
authors = ["Mattias Lundberg <me@mlundberg.se>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "*"
fuzzy-matcher = "*"
rand = "*"
yaml-rust = "*"
linked-hash-map = "*"

[features]
nightly = []

[build-dependencies]
rustc_version = "0.1.*"
